Fixed logo height issue on mobile devices

--- a/style.css
+++ b/style.css
@@ -381,7 +381,7 @@ section.home {
     }
 
     .logo.homepage {
-        color: #fff;
+        background: #fff;
     }
 
     .logo a {
